creamos paginas e imagenes

--- a/index.html
+++ b/index.html
@@ -15,9 +15,21 @@
    <h1>Mundial Qatar 2022</h1> 
 </header>
 <nav>
-    <!--enlaces -->
-    <a href=""> link a una pagina.HTML </a>
-    <a href="./about.html" atr> Sobre nosotros </a>
+    <!--Menu del sitio-->
+    <ul>
+        <li>
+        <!--enlaces -->
+        <a href=""> link a una pagina.HTML </a>
+        </li>
+        <li>
+        <a href="./about.html" atr> Sobre nosotros </a>
+        </li>
+        <li>
+         <a href="./Pages/etiquetas.html">
+        Etiquetas B&aacute;sicas
+        </a>
+        </li>
+    </ul>
 </nav>
     <main>
         <!--Contenido principal del documento -->
@@ -49,6 +61,22 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem veritatis, iste blanditiis quia labore at excepturi nostrum aperiam animi deleniti necessitatibus! Cupiditate eos dolores voluptatum exercitationem debitis modi quae vero.
             </p>
          </article>
+         <article>
+            <h3>Im&aacute;genes</h3>
+            <!--local: relativa -->
+            <img src="./img/los_simpson_qatar.jpg"
+                height="25%"
+                width="25%">
+            <img src="./img/los_simpson_qatar.jpg"
+                height="25%"
+                width="25%">
+            <!--Remoto: absolutas -->
+            <img src="https://estaticos-cdn.sport.es/clip/db7b9aea-d767-448d-a809-66aeb12a952e_media-libre-aspect-ratio_default_0.jpg" 
+                alt="Homero sacando roja"
+                width="25%"
+                height="auto">
+         </article>
+        
     </main>
     <aside>
         <h3>Soponsor</h3>
