Completando enlaces entre paginas y boton volver

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -8,15 +8,14 @@
 </head>
 <body>
     <header>
-        <nav>
+                <nav>
             <a href="../index.html">Volver</a>
         </nav>
+    <section>
         <h1>
-            Alta de Personas
-        </h1>
-        <p>Para registrarse debe completar el formulario haciendo clic:</p>
-        <a href="./formularios.html">AQUÍ</a>
+            Sobre de Nosotros
+         </h1>
+    </section>
     </header>
-    
 </body>
 </html>
