--- a/Pages/home.html
+++ b/Pages/home.html
@@ -11,12 +11,12 @@
         <nav>
             <a href="../index.html">Volver</a>
         </nav>
+
+    <section>
         <h1>
-            Alta de Personas
+           Home
         </h1>
-        <p>Para registrarse debe completar el formulario haciendo clic:</p>
-        <a href="./formularios.html">AQUÍ</a>
+    </section>
     </header>
-    
 </body>
 </html>
