--- a/Pages/vision.html
+++ b/Pages/vision.html
@@ -11,12 +11,11 @@
         <nav>
             <a href="../index.html">Volver</a>
         </nav>
+    <section>
         <h1>
-            Alta de Personas
-        </h1>
-        <p>Para registrarse debe completar el formulario haciendo clic:</p>
-        <a href="./formularios.html">AQUÍ</a>
+            Vision
+         </h1>
+    </section>
     </header>
-    
 </body>
 </html>
