--- a/index.html
+++ b/index.html
@@ -19,15 +19,24 @@
     <ul>
         <li>
         <!--enlaces -->
-        <a href=""> link a una pagina.HTML </a>
+        <a href="./Pages/altadepersonas.html"> Alta de Personas </a>
         </li>
         <li>
-        <a href="./about.html" atr> Sobre nosotros </a>
+        <a href="./Pages/about.html" atr> Sobre nosotros </a>
         </li>
         <li>
          <a href="./Pages/etiquetas.html">
         Etiquetas B&aacute;sicas
         </a>
+        </li>
+        <li>
+            <a href="./Pages/formularios.html" atr> Formularios </a>
+        </li>
+        <li>
+            <a href="./Pages/vision.html" atr> Vision </a>
+        </li>
+        <li>
+            <a href="./Pages/table.html" atr> Tablas </a>
         </li>
     </ul>
 </nav>
