--- a/Pages/formularios.html
+++ b/Pages/formularios.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="../index.html">Volver a la p&aacute;gina Pricipal</a><br><br>
+            <a href="altadepersonas.html">Volver a Alta de Personas</a>
+        </nav>
+    </header>
     <main>
         <section>
             <h1>Formularios</h1>
