--- a/Pages/table.html
+++ b/Pages/table.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="../index.html">Volver</a>
+        </nav>
+    </header>
     <main>
         <section>
             <h1>Tabla</h1>
