--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
         <li>
             <a href="./Pages/table.html" atr> Tablas </a>
         </li>
+        <li>
+            <a href="./Pages/css.html" atr> CSS </a>
+        </li>
     </ul>
 </nav>
     <main>
