--- a/Pages/Curriculum.html
+++ b/Pages/Curriculum.html
@@ -310,9 +310,18 @@
     }
     </style>
     </head>
+    
     <body style="margin: 0px; background: #0e0e0e; height: 50%">
-        <img onclick="zoom ()" style="display: block;-webkit-user-select: none;margin: auto;cursor: zoom-in;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://vmscaz.files.wordpress.com/2013/10/curriculum-vitae-page-001.jpg" width="442" height="625">
-        <img onclick="zoom ()" style="display: block;-webkit-user-select: none;margin: auto;cursor: zoom-out;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://vmscaz.files.wordpress.com/2013/10/curriculum-vitae-page-001.jpg" width="1241" height="1754">
+        <img style="display: block;
+        -webkit-user-select: none;
+        margin: auto;
+        cursor: zoom-in;
+        background-color: hsl(0, 0%, 90%);
+        transition: background-color 300ms;" 
+        src="https://vmscaz.files.wordpress.com/2013/10/curriculum-vitae-page-001.jpg" 
+        width="442" 
+        height="625">
+        <img style="display: block;-webkit-user-select: none;margin: auto;cursor: zoom-out;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://vmscaz.files.wordpress.com/2013/10/curriculum-vitae-page-001.jpg" width="1241" height="1754">
         <div id="shimai-world" style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; z-index: 2147483647; pointer-events: none; background: transparent;">
         </div>
     </body>
