--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
         <li>
             <a href="./Pages/CV.html" atr> CV </a>
         </li>
+        <li>
+            <a href="./Pages/selectores_avanzados.html" atr> Selectores Avanzados </a>
+        </li>
     </ul>
 </nav>
     <main>
